# barrancos

./: Untitled.ipynb  pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
barrancos/: Conect_aws.py  Connect_DB.py  test.py
db/: config.py  crud.py  models.py
