[tool.poetry]
name = "barrancos"
version = "0.1.0"
description = ""
authors = ["eugenilosada <eugenilos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
pyodbc = "^4.0.35"
sqlalchemy = "^1.4.46"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
